--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>07-03 22:16:17 <br> 153 <br> 90 <br> 143 </h1> <!-- 변수를 제목에 적용 -->
+            <h1>07-03 23:03:43 <br> 201 <br> 0 <br> 191 </h1> <!-- 변수를 제목에 적용 -->
             <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -408,6 +408,12 @@
       <td>geonho3</td>
       <td>aman</td>
       <td>1248.0</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <td>geonho3</td>
+      <td>abrelsyud</td>
+      <td>NaN</td>
       <td>NaN</td>
     </tr>
     <tr>
